로그인 디자인 교체

--- a/src/main/resources/templates/page/join-agree.html
+++ b/src/main/resources/templates/page/join-agree.html
@@ -193,7 +193,7 @@
                             <!-- //content group1 -->
 
                             <div class="btnWrapper">
-                                <a href="/login" class="btnL colorGray"><span>이전</span></a>
+                                <a th:href="@{/login}" class="btnL colorGray"><span>이전</span></a>
                                 <a href="#;" class="btnL colorBlue" @click="validateAgree"><span>다음</span></a>
                             </div>
                         </div>
