--- a/src/main/resources/static/css/cmmn/login.css
+++ b/src/main/resources/static/css/cmmn/login.css
@@ -1,45 +1,76 @@
-@charset 'UTF-8';
 
-/* ------------------------------ 
- * Description: 로그인 페이지 전용
- * Modified-date: 2016.08.
- * ------------------------------ */
-
-html,body { background:url('../../images/cmmn/login-bg.jpg') center top !important;overflow-x:hidden; }
-
- /* 로그인 */
- .loginWrapper {position:relative;height:100%;min-height:630px;max-height:768px; }
- .loginVisual { width:100%;_background:url('../../images/cmmn/login-bg.jpg') center top;height:100%;position: relative; }
- .loginVisual .visualBox { max-width:1200px; margin:0 auto; }
-  .loginVisual .visualBox h1 { text-align:center;padding-top:5% }
- .loginVisual .visualBox .vImg { position:absolute; z-index:3; text-align:center; bottom:160px; left:50%; margin-left:-258px; }
- .loginBox { width:100%; position:absolute; bottom:30px;
- 	background-color:#005fa6;
-	background-image: -moz-linear-gradient(top, #0072b4 50%, #005fa6 100%);
-	background-image: -webkit-linear-gradient(top,#0072b4 50%, #005fa6 100%);
-	background-image: linear-gradient(to bottom, #0072b4 50%, #005fa6 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0072b4', endColorstr='#005fa6',GradientType=0);
+ html {
+  color: #222;
+  font-size: 1em;
+  line-height: 1.4;
+  font-family: NanumGothic; 
 }
-.loginBox .loginForm {width:448px;margin:0 auto;position:relative; padding:56px 12px 18px 12px;}
-.loginBox .loginForm h2 { margin-bottom:12px;text-align:center; }
-.loginBox input[type=text],
-.loginBox input[type=password] {border:1px solid #ccc; border-radius:3px; height:40px; line-height:1.5; background:#fff; font-size:12px; width:76%; padding-left: 12px;}
-.loginBox .loginForm > p { border:solid #ccc;}
-.loginBox .etcLink { width:76%;font-size:12px;margin-top:4px; }
-.loginBox .etcLink a { color:#fff; padding:0 1px; }
-.loginBox .etcLink .linkJoin { float:right;font-weight:bold; }
-.loginBox .formWrapper > p {margin-bottom:6px;}
-.loginBox .btnLogin { position:absolute; top:90px; right:0;border-radius:3px; border:1px solid #00aaec; width:106px; height:78px;
-	background-color:#0093e4;
-	background-image: -moz-linear-gradient(top, #00bef2 50%, #009fec 100%);
-	background-image: -webkit-linear-gradient(top,#00bef2 50%, #009fec 100%);
-	background-image: linear-gradient(to bottom, #00bef2 50%, #009fec 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00bef2', endColorstr='#009fec',GradientType=0);
-}
-.loginBox .btnLogin span { margin-top:30px; }
-.loginBox label {position:absolute;overflow:hidden;clip:rect(0,0,0,0);width:1px;height:1px;margin:-1px;padding:0;border:0;}
+ body{
+ background-image:url('../../images/cmmn/login-bg.png');
+ background-repeat:no-repeat;
+ background-size:cover;
+ background-position:center center;
+ height:100vh;
+ }
 
- .loginFooter { width:100%; height:30px; background:#005393;position:absolute; bottom:0; }
- .loginFooter p { text-align:center;color:#fff;font-size:11px;line-height:30px; }
- 
+ .block {
+  text-align: center;
+  /*background: #c0c0c0;
+  border:1px solid #a0a0a0; */
+  margin: 180px;
+}
+/* 정가운데 정렬을 위한 고스트 가상 요소 */
+
+.block:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  
+  /* 상황에 따라 간격 조정이 요구됨.*/
+
+  margin-right: -0.25em;
+  
+  /* 가상 요소 확인용 (주석제거 후 확인) */
+  /*background: #808080;width: 5px;*/
+}
+
+.centered {
+  display: inline-block;
+  vertical-align: middle;
+  width: 700px;
+  padding:10px 30px;
+  border: #a0a0a0 solid 1px;
+  background: #f5f5f5;
+}
+a{text-decoration:none; color:#000000;}
+
+p.top-content01{font-size:1.4rem; font-weight:bold; color:#0759aa;}
+p.top-content02{font-size:1.0rem; font-weight:normal; color:#404244;}
+
+h1{ 
+text-align:left; width:60%; font-size:24px; font-weight:bold;
+}
+.join_membership01{float:left; margin-top:0px; font-size:1.4rem; }
+span.join_membership a{color:#5d5858; font-size:1rem; font-weight:bold;}
+.find01{float:right;
+font-size:1.4rem;   
+margin-left:10px;
+}
+.infonation_inut01{float:left;}
+.find_id{color:#b9b6b6; font-size:1rem; font-weight:bold; }
+.find_password{color:#b9b6b6; font-size:1rem; font-weight:bold; }
+
+
+.infonation_inut01{float:left; width:80%; margin-left:-25px;}
+.infonation_inut01 input{width:85%; padding:15px; color:7f7b7b; font-size:1.0rem; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px; -o-border-radius:5px; border:1px solid #d1cdcd;}
+
+.id01{margin-bottom:5px; _margin-bottom:10px;}
+
+.login-icon{float:right; margin-top:-150px; width:30%; text-align:right;}
+
+.button01{clear:both; width:100%; padding:2px; background-color:#0759aa; margin:0 auto; margin-left:0px; margin-bottom:10px; border-radius:5px; -webkit-border-radius:5px; -moz-border-radius:5px; -o-border-radius:5px;}
+.button01 a{color:#ffffff; font-weight:bold; font-size:1.4rem;}
+
+p.coplyright_content{margin-top:70px; margin-bottom:-10px; color:#353232; font-weight:normal; clear:both; width:700px; height:50px; line-height:50px; background:#dfdbdb; margin-left:-30px; padding-left:30px; padding-right:30px;}
 
