--- a/src/main/resources/templates/page/login.html
+++ b/src/main/resources/templates/page/login.html
@@ -133,7 +133,7 @@
                 <span class="join_membership"><a th:href="@{/join}">회원가입</a></span>
             </div>
             <div class="find01">
-                <span class="find_password"><a href="#">비밀번호 찾기</a></span>
+                <span class="find_password"><a th:href="@{/findpw}">비밀번호 찾기</a></span>
             </div>
             <p class="coplyright_content">copyrights PENTAS. all rights reserved.</p>
         </div>
