--- a/src/main/resources/templates/page/find-password.html
+++ b/src/main/resources/templates/page/find-password.html
@@ -7,6 +7,7 @@
     <style>
         #container {
             text-align: center;
+            min-height: 88vh;
         }
 
         .fixedWidth {
