비밀번호 재설정 수정

--- a/src/main/resources/templates/page/find-password.html
+++ b/src/main/resources/templates/page/find-password.html
@@ -353,7 +353,7 @@
                     if (rslt.rsltStat === 'SUCC') {
                         alert('가입정보 확인 후 가입하신 이메일로\n임시 비밀번호가 전송됩니다.')
                         this.$refs.logo.click() // 메인으로 이동하기위한 로고 클릭
-                    } else {
+                    } else if (rslt.rsltStat === 'NOAC') {
                         alert('해당 가입정보가 없습니다.\n입력하신 정보를 확인해주세요.')
                         this.initPop()
                     }
