회원가입 이미지 경로 수정

--- a/src/main/resources/templates/page/join-agree.html
+++ b/src/main/resources/templates/page/join-agree.html
@@ -346,9 +346,9 @@
                 },
                 layerPdfUrl: function() {
                     switch (this.layerType) {
-                        case 'SVC' : return '/images/agree/service.pdf'
-                        case 'PVC' : return '/images/agree/privacy.pdf'
-                        case 'MKT' : return '/images/agree/marketing.pdf'
+                        case 'SVC' : return './images/agree/service.pdf'
+                        case 'PVC' : return './images/agree/privacy.pdf'
+                        case 'MKT' : return './images/agree/marketing.pdf'
                         default : return ''
                     }
                 }
