--- a/src/main/resources/templates/page/join-form.html
+++ b/src/main/resources/templates/page/join-form.html
@@ -555,7 +555,7 @@
                 },
                 getImagePath: function(fileName) {
                     if (fileName !== undefined) {
-                        return '/imageSrc?fileName=' + fileName
+                        return '../imageSrc?fileName=' + fileName
                     }
                 }
             },
